--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "cybernetically-test",
   "version": "0.1.0",
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "node-sass": "^7.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
